ajout du paragraphe

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
   </head>
   <body>
     <h1>Git</h1>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam culpa
+      ullam quisquam distinctio explicabo enim expedita nisi dignissimos
+      corporis quod, deserunt eos nostrum, consectetur voluptatem consequuntur
+      ipsa beatae aperiam et!
+    </p>
   </body>
 </html>
